--- a/demo.html
+++ b/demo.html
@@ -123,23 +123,36 @@ window.onload=function()
                 </div>
 			</div>
 		</div>
-        <div layout="sz:'dialog',x:200,y:300">
+        <div layout="sz:'dialog',x:200,y:300,w:400,h:400">
             <div layout="sz:'accordion'">
-                    <div layout="sz:'sequence',dir:'h'">
-                        <div>first</div>
-				        <div>second</div>
-                        <div>third</div>
-				        <div>fourth</div>
-                    </div>
+                    
 				    <div  layout="sz:'snap',stepx:40,stepy:40">
                         <div layout="nx:1" style="background:orange">1</div>
                         <div layout="nx:2" style="background:orange">2</div>
                         <div layout="ny:2" style="background:orange">3</div>
+                        <div id="accordion" layout="nx:3,ny:4,s:100,sz:'accordion'" class="nicepanel">
+                            <div>first</div>
+                            <div>second</div>
+                            <div>third</div>
+                            <div>fourth</div>
+                        </div>
                         <div layout="nx:1" style="background:orange">4</div>
                         <div layout="nx:1" style="background:orange">5</div>
+                        <div layout="nx:4,ny:4,sz:'sequence',dir:'h'" class="nicepanel">
+                            <div>first</div>
+				            <div>second</div>
+                            <div>third</div>
+				            <div>fourth</div>
+                        </div>
                         <div layout="nx:1" style="background:orange">6</div>
                         <div layout="nx:1" style="background:orange">7</div>
                         <div layout="nx:1" style="background:orange">8</div>
+                    </div>
+                    <div layout="sz:'sequence',dir:'h'">
+                        <div>first</div>
+                        <div>second</div>
+                        <div>third</div>
+                        <div>fourth</div>
                     </div>
                     <div>third</div>
 				    <div>fourth</div>
