--- a/demo.html
+++ b/demo.html
@@ -110,15 +110,29 @@ window.onload=function()
                         <div>third</div>
 				        <div>fourth</div>
                     </div>
-                    <div  layout="sz:'snap',stepx:40,stepy:40">
-                        <div layout="nx:1" style="background:orange">1</div>
-                        <div layout="nx:2" style="background:orange">2</div>
-                        <div layout="ny:2" style="background:orange">3</div>
-                        <div layout="nx:1" style="background:orange">4</div>
-                        <div layout="nx:1" style="background:orange">5</div>
-                        <div layout="nx:1" style="background:orange">6</div>
-                        <div layout="nx:1" style="background:orange">7</div>
-                        <div layout="nx:1" style="background:orange">8</div>
+                    <div layout="sz:'split',dir:'v'">
+                        <div  layout="sz:'snap',stepx:40,stepy:40">
+                            <div layout="nx:4" style="background:orange">this is snap</div>
+                            <div layout="nx:1" style="background:orange">1</div>
+                            <div layout="nx:2" style="background:orange">2</div>
+                            <div layout="ny:2" style="background:orange">3</div>
+                            <div layout="nx:1" style="background:orange">4</div>
+                            <div layout="nx:1" style="background:orange">5</div>
+                            <div layout="nx:1" style="background:orange">6</div>
+                            <div layout="nx:1" style="background:orange">7</div>
+                            <div layout="nx:1" style="background:orange">8</div>
+                        </div>
+                        <div  layout="sz:'smart',stepx:40,stepy:40">
+                            <div layout="nx:4" style="background:orange">this is smart</div>
+                            <div layout="nx:1" style="background:orange">1</div>
+                            <div layout="nx:2" style="background:orange">2</div>
+                            <div layout="ny:2" style="background:orange">3</div>
+                            <div layout="nx:1" style="background:orange">4</div>
+                            <div layout="nx:1" style="background:orange">5</div>
+                            <div layout="nx:1" style="background:orange">6</div>
+                            <div layout="nx:1" style="background:orange">7</div>
+                            <div layout="nx:1" style="background:orange">8</div>
+                        </div>
                     </div>
                 </div>
 			</div>
