fixed accordion selection, changed some styles

--- a/demo.html
+++ b/demo.html
@@ -27,10 +27,18 @@ border-radius: 5px;
 }
 
 
+
+.dialogheader
+{
+background: rgb(111, 173, 202);
+color: whitesmoke;
+font-weight: bolder;
+font-size: larger;
+}
+
 .jlaccordionflap
 {
 border: 1px solid darkgray;
-background:rgb(217, 230, 238);
 }
 
 
@@ -44,7 +52,7 @@ background:rgb(217, 230, 238);
 }
 
 
-.tabheader > div.selected
+div.selected
 {
     background:rgb(122, 156, 172);
     color:white;
