changed some titles

--- a/demo.html
+++ b/demo.html
@@ -112,13 +112,13 @@ window.onload=function()
 					<div layout="w:60">second</div>
 					<div layout="w:70">third</div>
 					<div layout="w:80">fourth</div>
-			        <div id="accordion" layout="w:100,sz:'accordion'">
+			        <div id="accordion" layout="w:100,sz:'accordion',title:'accordion'">
 					        <div>first</div>
 					        <div>second</div>
 					        <div>third</div>
 					        <div>fourth</div>
 			        </div>
-			        <div layout="w:200,sz:'split',dir:'v',splitpos:100">
+			        <div layout="w:200,sz:'split',dir:'v',splitpos:100,title:'split'">
 				        <div style="border:1px solid black;padding:5px;margin:5px;">ciao</div>
 				        <div style="border:1px solid black;padding:5px;margin:5px;">mondo</div>
 			        </div>
