--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>JL.js : a pure javascript layout library</h3>
+        
 
 
-<a  href="demo.html"><h6 class="octicon octicon-link">DEMO</h6></a></h3>
+<a  href="demo.html"><h1 class="octicon octicon-link" style="
+    text-align: center;
+    font-size: 40px;
+">DEMO</h1></a>
 
 
 
