--- a/demo.html
+++ b/demo.html
@@ -275,7 +275,7 @@ window.onload=function()
 				};
 		</script>
 	</div>
-	<div layout="sz:'backdrop'"></div>
+	<!--<div layout="sz:'backdrop'"></div>-->
 </body>
 </html>
  
