--- a/index.html
+++ b/index.html
@@ -8,6 +8,97 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <script type="text/javascript" src="jl.js"></script>
+    <style>
+
+.jlexclude{
+    background:rgb(237, 239, 241);
+    overflow: hidden;
+    white-space: nowrap;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor:default;
+}
+
+button[layout] {
+box-sizing: content-box;
+}
+
+.jlbutton
+{
+cursor:default;
+padding: 10px;
+border: 1px solid darkgray;
+border-radius: 5px;
+}
+
+
+
+.dialogheader
+{
+background: rgb(111, 173, 202);
+color: whitesmoke;
+font-weight: bolder;
+font-size: larger;
+}
+
+.jlaccordionflap
+{
+border: 1px solid darkgray;
+}
+
+
+
+.tabheader > div
+{
+    background:whitesmoke;
+    cursor: pointer;
+    border:1px solid gray;
+    padding:3px;
+}
+
+
+div.selected
+{
+    background:rgb(122, 156, 172);
+    color:white;
+}
+
+/*span.jlflaps {
+border: 1px solid gray;
+margin: 1px;
+padding: 3px;
+cursor: pointer;
+background-color: whitesmoke;
+font-family: cursive;
+font-weight: 700;
+position:relative;
+bottom:-6px;
+}*/
+
+
+.HalfCircleLeft
+{
+    margin: 100px;
+    height: 100px;
+    width: 50px;
+    border-radius: 0 50px 50px 0;
+    background-color: #cfa040;
+    position: relative;
+}
+
+
+.nicepanel
+{
+border: 1px solid darkgrey;
+margin:5px;
+}
+
+
+</style>
     <title>Jl.js by alexroat</title>
   </head>
 
@@ -38,7 +129,7 @@
 
 
 
-  <div layout="sz:box,dir='v'" style="width:300px;height:200px;background:white;">
+  <div layout="sz:box,dir='v'" style="right: 0px;height: 300px;background:white;">
     ok
     
     
