--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@ margin:5px;
 
 
 </style>
+
+
+<script type="text/javascript">
+window.onload=function()
+{
+	jl();
+}
+</script>
+
     <title>Jl.js by alexroat</title>
   </head>
 
