--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ window.onload=function()
 
 
 
-  <div layout="sz:box,dir='v'" style="right: 0px;height: 300px;background:white;">
+  <div layout="sz:box,dir='v'" style="right: 0px;height: 300px;background:white;position:relative;">
     <div layout="h:20" style="border:2px solid grey;oveflow:hidden;background:beige">Please visit the <a href="https://github.com/alexroat/jl.js/">JL.js project page</a></div>
 		<div layout="sz:'box',p:1" style="margin:2px;">
             <div layout="sz:'flaps',dir:'left',w:100" style="border:1px solid lightgrey;margin:2px;">
