--- a/demo.html
+++ b/demo.html
@@ -105,9 +105,9 @@ window.onload=function()
 </head>
 <body layout="sz:'fullpage'">
 	<div layout="sz:'box',dir:'v'">
-		<div layout="h:20" style="border:2px solid grey;oveflow:hidden;background:beige">Header</div>
+		<div layout="h:20" style="border:2px solid grey;oveflow:hidden;background:beige">Please visit the <a href="https://github.com/alexroat/jl.js/">JL.js project page</a></div>
 		<div layout="sz:'box',p:1" style="margin:2px;">
-            <div layout="sz:'flaps',dir:'left',w:100" style="border:1px solid lightgrey;margin:2px;">
+            <div layout="sz:'flaps',dir:'left'" style="border:1px solid lightgrey;margin:2px;">
 					<div layout="w:50">first</div>
 					<div layout="w:60">second</div>
 					<div layout="w:70">third</div>
@@ -275,7 +275,7 @@ window.onload=function()
 				};
 		</script>
 	</div>
-	<div layout="sz:'backdrop'"></div>
+	<!--<div layout="sz:'backdrop'"></div>-->
 </body>
 </html>
  
