--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,19 @@
-<!DOCTYPE HTML>
+</body>
+</html>
+ 
+ <!DOCTYPE HTML>
 <html>
 <head>
+<script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-48707894-2");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 <meta charset="utf-8">
 <style>
 
@@ -107,7 +120,7 @@ window.onload=function()
 	<div layout="sz:'box',dir:'v'">
 		<div layout="h:20" style="border:2px solid grey;oveflow:hidden;background:beige">Please visit the <a href="https://github.com/alexroat/jl.js/">JL.js project page</a></div>
 		<div layout="sz:'box',p:1" style="margin:2px;">
-            <div layout="sz:'flaps',dir:'left',w:100" style="border:1px solid lightgrey;margin:2px;">
+            <div layout="sz:'flaps',dir:'left'" style="border:1px solid lightgrey;margin:2px;">
 					<div layout="w:50">first</div>
 					<div layout="w:60">second</div>
 					<div layout="w:70">third</div>
@@ -276,21 +289,12 @@ window.onload=function()
 		</script>
 	</div>
 	<!--<div layout="sz:'backdrop'"></div>-->
-	
-	
-	
-	 <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-48707894-2");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
 </body>
 </html>
+ 
+ 
+ 
+ 
  
  
  
