--- a/demo.html
+++ b/demo.html
@@ -35,7 +35,7 @@ border-radius: 5px;
 {
 background: rgb(111, 173, 202);
 background-image: linear-gradient(rgb(222, 239, 255) 0%, rgb(152, 190, 222) 100%);
-color: whitesmoke;
+color: darkslategrey;
 font-weight: bolder;
 font-size: larger;
 }
