--- a/demo.html
+++ b/demo.html
@@ -143,7 +143,7 @@ window.onload=function()
 						<div>first</div>
 						<div>second</div>
 						<div>third</div>
-						<textarea>fourth</textarea>
+						<textarea style="width:100%">fourth</textarea>
 					</div>
 					<div layout="sz:'sequence',dir:'h'" class="nicepanel">
 						<div>first</div>
