--- a/demo.html
+++ b/demo.html
@@ -2,107 +2,26 @@
 <html>
 <head>
 <meta charset="utf-8">
-<style>
-
-.jlexclude{
-    background:rgb(237, 239, 241);
-    overflow: hidden;
-    white-space: nowrap;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor:default;
-}
-
-button[layout] {
-box-sizing: content-box;
-}
-
-.jlbutton
-{
-cursor:default;
-padding: 10px;
-border: 1px solid darkgray;
-border-radius: 5px;
-}
-
-
-
-.dialogheader
-{
-background: rgb(111, 173, 202);
-background-image: linear-gradient(rgb(222, 239, 255) 0%, rgb(152, 190, 222) 100%);
-color: darkslategrey;
-font-weight: bolder;
-font-size: larger;
-}
-
-.jlaccordionflap
-{
-border: 1px solid darkgray;
-}
-
-
-
-.tabheader > div
-{
-    background:whitesmoke;
-    cursor: pointer;
-    border:1px solid gray;
-    padding:3px;
-}
-
-
-div.selected
-{
-    background:rgb(122, 156, 172);
-    color:white;
-}
-
-/*span.jlflaps {
-border: 1px solid gray;
-margin: 1px;
-padding: 3px;
-cursor: pointer;
-background-color: whitesmoke;
-font-family: cursive;
-font-weight: 700;
-position:relative;
-bottom:-6px;
-}*/
-
-
-.HalfCircleLeft
-{
-    margin: 100px;
-    height: 100px;
-    width: 50px;
-    border-radius: 0 50px 50px 0;
-    background-color: #cfa040;
-    position: relative;
-}
-
-
-.nicepanel
-{
-border: 1px solid darkgrey;
-margin:5px;
-}
-
-
-</style>
+<link rel="stylesheet" type="text/css" href="default.css">
 <script type="text/javascript" src="jl.js"> </script>
-
-
 <script type="text/javascript">
-window.onload=function()
-{
-	jl();
-}
+jl.boot();
 </script>
+
+<script>
+				var gen=function()
+				{
+					var n=document.createElement("div");
+					var nx=1+Math.floor(Math.random()*3);
+					var ny=1+Math.floor(Math.random()*3);
+					n.setAttribute("layout","nx:"+nx+",ny:"+ny+",sz:'closable'");
+					var color="rgba("+Math.floor(Math.random()*255)+","+Math.floor(Math.random()*255)+","+Math.floor(Math.random()*255)+",0.5)";
+					jl.setStyle(n,{border: "1px solid grey",margin:"3px",background:color});
+					this.parentNode.appendChild(n);
+					jl(this.parentNode);
+					
+				};
+		</script>
 </head>
 <body layout="sz:'fullpage'">
 	<div layout="sz:'box',dir:'v'">
@@ -261,20 +180,7 @@ window.onload=function()
 		<div  layout="sz:'smart',stepx:40,stepy:40">
 			<button layout="nx:2" onclick="gen.call(this)">clickme</button>
 		</div>
-		<script>
-				var gen=function()
-				{
-					var n=document.createElement("div");
-					var nx=1+Math.floor(Math.random()*3);
-					var ny=1+Math.floor(Math.random()*3);
-					n.setAttribute("layout","nx:"+nx+",ny:"+ny+",sz:'closable'");
-					var color="rgba("+Math.floor(Math.random()*255)+","+Math.floor(Math.random()*255)+","+Math.floor(Math.random()*255)+",0.5)";
-					jl.setStyle(n,{border: "1px solid grey",margin:"3px",background:color});
-					this.parentNode.appendChild(n);
-					jl(this.parentNode);
-					
-				};
-		</script>
+		
 	</div>
 	<!--<div layout="sz:'backdrop'"></div>-->
 </body>
